# cg-lab-1516

./: .gitignore  CGVIewer.pro  CGViewer.cpp  CGViewer.h  CMakeLists.txt  ClosedCircle.h  DicomReader.cpp  Kegel.h  LICENSE  Mesh.cpp  Mesh.h  OpenDocument Präsentation (neu).odp  OpenDocument Präsentation (neu).ppt  ParamRenderArea.cpp  ParamRenderArea.h  ParametricWindow.cpp  ParametricWindow.h  Parametrics.cpp  Parametrics.h  ParametricsViewer.cpp  ParametricsViewer.h  Part.h  README.md  StlReader  StlReader.cpp  StlReader.h  StlReader.pro  Torus.h  Treefoil.h  Trefoil.h  UserInteractions.cpp  Volume.h  Volume_Kegel.h  Volume_Zylinder.h  Zylinder.h  drawing.cpp  fshader.glsl  keynote.key  keynote.ppt  keynote_sbrodehl.ppt  (+1 more)
CMake/: CXX11.cmake
Data/: test.stp
PolygonTriangulation/: Application.java  DelaunayTriangulationIncremental.java  Drawable2D.java  Edge.java  TriangulationAlgorithm.java  Vertex.java
PolygonTriangulationC/: Edge.h  Line.h  TriangulationAlgorithm.cpp  TriangulationAlgorithm.h  Vertex.cpp  Vertex.h
docs/: keynote.key
parametrics/: Cone.h  Disc.h  ParameterTriangle.h  Torus.h  Trefoil.h  Tube.h
parts/: ConePart.h  CylinderPart.h  TorusPart.h  TrefoilPart.h
shader/: fshader.glsl
